--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -25,6 +25,8 @@
             integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
             crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="./style.css">
+
     <script type="text/javascript" src="./displayConflicts.js"></script>
 
 
