--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -60,8 +60,9 @@
         var chart = new CanvasJS.Chart("chartContainer",
                 {
                     title:{
-                        text: "Jar Conflicts Statistics"
+                        text: "Jar Conflicts"
                     },
+                    zoomEnabled:true,
                     animationEnabled: true,
                     legend:{
                         verticalAlign: "center",
